--- a/eda/docker-compose.yml
+++ b/eda/docker-compose.yml
@@ -8,9 +8,12 @@ services:
       - '2181:2181'
       - '2888:2888'
       - '3888:3888'
+      - '9010:9010'
     container_name: zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+      - JMXHOST=0.0.0.0
+      - JMXPORT=9010
     tty: true
     networks:
       - kafka_network
@@ -19,15 +22,18 @@ services:
   kafka:
     image: 'quay.io/debezium/kafka:2.6'
     ports:
+      - '9011:9011'
       - '9092:9092'
       - '9093:9093'
       - '9094:9094'
     container_name: kafka
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
+      - JMXHOST=0.0.0.0
+      - JMXPORT=9011
+    tty: true
     depends_on:
       - zookeeper
-    tty: true
     networks:
       - kafka_network
 
@@ -55,7 +61,7 @@ services:
     environment:
       - "MYSQL_ROOT_PASSWORD=root"
     volumes:
-      - ./container/mysql/cnf/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./container/mysql/cnf/master.cnf:/etc/mysql/conf.d/my.cnf
       - ./container/mysql/script:/docker-entrypoint-initdb.d
     networks:
       - "kafka_network"
@@ -63,31 +69,43 @@ services:
   connect:
     image: "quay.io/debezium/connect:2.6"
     container_name: connect
-    depends_on:
-      - "zookeeper"
-      - "kafka"
-      - "mysql"
     ports:
       - "8083:8083"
+      - "9012:9012"
     environment:
       - "BOOTSTRAP_SERVERS=kafka:9092"
       - "GROUP_ID=1"
       - "CONFIG_STORAGE_TOPIC=connect_configs"
       - "OFFSET_STORAGE_TOPIC=connect_offsets"
       - "STATUS_STORAGE_TOPIC=connect_status"
+      - "JMXHOST=0.0.0.0"
+      - "JMXPOST=9012"
+    depends_on:
+      - "zookeeper"
+      - "kafka"
+      - "mysql"
     networks:
       - kafka_network
 
   debezium-ui:
     image: "quay.io/debezium/debezium-ui:2.4"
     container_name: debezium-ui
-    depends_on:
-      - "connect"
     ports:
       - "8080:8080"
     environment:
       - "KAFKA_CONNECT_URIS=http://connect:8083"
+    depends_on:
+      - "connect"
     networks:
       - kafka_network
+
+  prometheus:
+    image: "prom/prometheus"
+    container_name: prom
+    ports:
+      - "9090:9090"
+    networks:
+      - kafka_network
+
 networks:
   kafka_network:
