--- a/eda/compose.yaml
+++ b/eda/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   # Zookeeper
   zookeeper:
@@ -15,6 +13,13 @@ services:
       - JMXHOST=0.0.0.0
       - JMXPORT=9010
     tty: true
+    healthcheck:
+      test: ./bin/zkCli.sh ls /
+      start_period: 1m
+      start_interval: 5s
+      interval: 5m
+      timeout: 10s
+      retries: 10
     networks:
       - kafka_network
 
@@ -32,8 +37,16 @@ services:
       - JMXHOST=0.0.0.0
       - JMXPORT=9011
     tty: true
+    healthcheck:
+      test: ./bin/kafka-topics.sh --bootstrap-server kafka:9092 --list
+      start_period: 1m
+      start_interval: 5s
+      interval: 5m
+      timeout: 10s
+      retries: 10
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     networks:
       - kafka_network
 
@@ -50,6 +63,9 @@ services:
       - KAFKA_CLUSTERS_0_ZOOKEEPER=2181
       - KAFKA_CLUSTERS_0_READONLY=false
       - SERVER_PORT=8081
+    depends_on:
+      kafka:
+        condition: service_healthy
     networks:
       - kafka_network
 
@@ -63,6 +79,13 @@ services:
     volumes:
       - ./container/mysql/cnf/master.cnf:/etc/mysql/conf.d/my.cnf
       - ./container/mysql/script:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: "mysqladmin ping -h localhost -u root -p$$MYSQL_ROOT_PASSWORD"
+      start_period: 1m
+      start_interval: 5s
+      interval: 5m
+      timeout: 10s
+      retries: 10
     networks:
       - "kafka_network"
 
@@ -71,6 +94,7 @@ services:
     container_name: connect
     ports:
       - "8083:8083"
+      - "8778:8778"
       - "9012:9012"
     environment:
       - "BOOTSTRAP_SERVERS=kafka:9092"
@@ -80,24 +104,28 @@ services:
       - "STATUS_STORAGE_TOPIC=connect_status"
       - "JMXHOST=0.0.0.0"
       - "JMXPOST=9012"
+      - "ENABLE_JOLOKIA=true"
     depends_on:
-      - "zookeeper"
-      - "kafka"
-      - "mysql"
+      zookeeper:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      mysql:
+        condition: service_healthy
     networks:
       - kafka_network
 
-  debezium-ui:
-    image: "quay.io/debezium/debezium-ui:2.4"
-    container_name: debezium-ui
-    ports:
-      - "8080:8080"
-    environment:
-      - "KAFKA_CONNECT_URIS=http://connect:8083"
-    depends_on:
-      - "connect"
-    networks:
-      - kafka_network
+        # debezium-ui:
+        #   image: "quay.io/debezium/debezium-ui:2.4"
+        #   container_name: debezium-ui
+        #   ports:
+        #     - "8080:8080"
+        #   environment:
+        #     - "KAFKA_CONNECT_URIS=http://connect:8083"
+        #   depends_on:
+        #     - "connect"
+        #   networks:
+        #     - kafka_network
 
   prometheus:
     image: "prom/prometheus"
@@ -106,6 +134,14 @@ services:
       - "9090:9090"
     networks:
       - kafka_network
+
+
+        # ubuntu:
+        #   image: "ubuntu"
+        #   container_name: ubuntu
+        #   tty: true
+        #   networks:
+        #     - kafka_network
 
 networks:
   kafka_network:
